Application z-index Fixed

--- a/main.css
+++ b/main.css
@@ -96,7 +96,10 @@ body {
     top: 0;
     width: 5px;
     height: 10px;
-    background-color: red;
+    background-color: white;
+    box-sizing: border-box;
+    border: solid black;
+    border-width: 1px 0;
 }
 
 
@@ -134,6 +137,7 @@ input {
     text-align: center;
     font-size: 10px;
     flex-shrink: 0;
+    border-left: solid black 1px;
 }
 
 .clearfix::after {
@@ -151,11 +155,14 @@ input {
     height: 100vh;
     position: absolute;
     top: 0;
+    z-index: 1;
 }
 
 .separator {
     height: 10px;
     background-color: lightblue;
+    position: relative;
+    z-index: 3;
 }
 p {
     line-height: 10px;
